# projekt_cpp_ug

./: .gitignore  Action.cpp  Action.h  Animal.cpp  Animal.h  Behavior.cpp  Behavior.h  CMakeLists.txt  Creator.tpp  LivingWorld.cpp  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Position.cpp  Position.h  README.md  Spawner.h  Spawner.tpp  UILogger.cpp  World.cpp  World.h
ActionImpl/: MoveRandomly.cpp  MoveRandomly.h
AnimalImpl/: Sheep.cpp  Sheep.h
PlantImpl/: Grass.cpp  Grass.h
Serializer/: Variant.cpp  Variant.h  Variant.tpp
Serializer/Base/Interfaces/: ISerializable.h  ISerializer.h
Serializer/Impl/Serializer/: JSONSerializer.cpp  JSONSerializer.h
UI/: WorldViewerWindow.cpp  WorldViewerWindow.h  WorldViewerWindow.ui
UI/Utils/: Spawner.cpp  Spawner.h  UILogger.cpp  UILogger.h
UI/Utils/Models/: SpawnSettings.h
World/: Creator.cpp  Creator.h  Creator.tpp  World.cpp  World.h  World.ixx  World.tpp
World/Base/: ActionBase.cpp  ActionBase.h  Animal.ixx  AnimalBase.cpp  AnimalBase.h  Organism.ixx  OrganismBase.cpp  OrganismBase.h  Plant.ixx  PlantBase.cpp  PlantBase.h
World/Base/Interfaces/: IAction.h  IAction.ixx  IBehavior.h  IBehavior.ixx  IIdentifier.h  IIdentifier.ixx  ILogger.h  IOrganism.h  IOrganism.ixx  IWorld.h  IWorld.ixx
World/Impl/Action/: Die.cpp  Die.h  Eat.cpp  Eat.h  MoveRandomly.cpp  MoveRandomly.h  MoveRandomly.ixx  Reproduce.cpp  Reproduce.h
World/Impl/Animal/: Sheep.cpp  Sheep.h  Sheep.ixx  Wolf.cpp  Wolf.h
World/Impl/Behavior/: AnimalBehavior.cpp  AnimalBehavior.h  DefaultBehavior.cpp  DefaultBehavior.h  DefaultBehavior.ixx  NoBehavior.cpp  NoBehavior.h  PlantBehavior.cpp  PlantBehavior.h  SheepBehavior.cpp  (+2 more)
World/Models/: ActionContext.h  AncestorHistoryItem.cpp  AncestorHistoryItem.h  AncestorHistoryItem.ixx  OrganismRecord.h  OrganismRecord.ixx  Position.cpp  Position.h  Position.ixx
(+23 files in other folders)
